# rsomics-fasta-locate

./: Cargo.toml
benches/: bench.rs
src/: cli.rs  lib.rs
tests/: compat.rs  smoke.rs
tests/golden/: small.fa  small_atgc.bed  small_atgc.tsv  small_atgc_icase.tsv  small_atgc_plus.tsv
